fix update product logic
