# server/src/main/java/kabopok/server/controllers/ProductController.java
@@ -4,8 +4,10 @@ import generated.kabopok.server.api.ProductApi;
 import generated.kabopok.server.api.model.ProductDTO;
 import kabopok.server.entities.Product;
 import kabopok.server.mappers.ProductMapper;
+import kabopok.server.minio.StorageService;
 import kabopok.server.services.ProductService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -18,6 +20,8 @@ public class ProductController implements ProductApi {
 
   private final ProductService productService;
   private final ProductMapper productMapper;
+
+  private final StorageService storageService;
 
   @Override
   public void createProduct(ProductDTO productDTO, List<MultipartFile> images) {
@@ -34,6 +38,14 @@ public class ProductController implements ProductApi {
   @Override
   public List<ProductDTO> getMyProducts(UUID userId, Integer page, Integer limit) {
     return productMapper.map(productService.getMyProducts(userId,page,limit));
+  }
+
+  @Override
+  @Transactional
+  public List<String> getProductUrlList(String productId) {
+    Product product = productService.getProduct(productId);
+    String path = product.getUser().getUserID() + "/" + product.getProductID() + "/";
+    return storageService.getProductUrlList("products", path);
   }
 
   @Override
